Cannot use keyboard in window move/resize mode
I am using mutter on Debian testing (version 3.34.1+git20191107-1). On two laptops I recently updated the basically same setup from GNOME 3.30 to 3.34, but on my main laptop, I no longer can use the keyboard in window move or resize mode (which I found out I apparently use often).
I noticed that process_key_events()
checks for a global grab mode which seems to work, but any keys, in particular the arrow keys but also Escape to exit the mode are not detected and thus nothing happens. Using the mouse in this mode does work, hence I assume that the all_keys_grabbed
is enabled successfully.
I don't know how to debug this well. Please let me know how, and I can provide more information.